--- a/FFalse/FFalse.fsproj
+++ b/FFalse/FFalse.fsproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <Compile Include="Lexer.fs" />
     <Compile Include="RuntimeStack.fs" />
+    <Compile Include="Eval.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
